<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.payment.activity.PaymentActivity">

    <TextView
        android:id="@+id/paymentTapScanTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/fragment_payment_tap_scan_tap_to_start"
        android:textColor="@color/materialGrey900"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/paymentTapScanNfcImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <ImageView
        android:id="@+id/paymentTapScanNfcImageView"
        android:layout_width="@dimen/image_view_dimen"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/radix_pos_common_contactless_payment_image_content_description"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_contactless_nfc"
        app:layout_constraintBottom_toTopOf="@+id/invisibleCentreView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/paymentTapScanScanToPayTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/fragment_payment_tap_scan_scan_to_pay"
        android:textColor="@color/materialGrey900"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invisibleCentreView"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/paymentTapScanPoweredByRadixImageView"
        android:layout_width="@dimen/image_view_dimen"
        android:layout_height="@dimen/image_view_dimen"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/fragment_payment_tap_scan_contactless_qr_code_image_content_description"
        android:gravity="center"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentTapScanScanToPayTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/ic_qr_code" />

    <View
        android:id="@+id/invisibleCentreView"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/POSButtons"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/fragment_payment_tap_scan_cancel_transaction_button"
        app:backgroundTint="@color/mustardYellow"
        app:layout_constraintBottom_toTopOf="@+id/paymentTapScanDetectingButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/paymentTapScanDetectingButton"
        style="@style/POSButtons"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:clickable="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/radix_pos_common_detecting_button_xml"
        app:backgroundTint="@color/continueDisabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>