<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.payment.activity.PaymentActivity">

    <TextView
        android:id="@+id/paymentTapScanTitleTextView"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/fragment_payment_tap_to_pay_title"
        android:textColor="@color/materialGrey900"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/centreView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/nfcImageView"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:contentDescription="@string/radix_pos_common_contactless_payment_image_content_description"
        android:gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/ic_contactless_nfc"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centreView" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:gravity="start"
        android:text="@string/fragment_payment_tap_to_pay_tapped_too_quick_try_again_message"
        android:textAlignment="center"
        android:textColor="@color/lightRed"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfcImageView"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/centreView"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/detectingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingParticlesRocketAnimationView"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/detectingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentTapScanTitleTextView"
        app:layout_constraintVertical_bias="0.30"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/particles_rocket" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detectingButton"
        style="@style/POSButtons"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:clickable="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/radix_pos_common_detecting_button_xml"
        app:backgroundTint="@color/disabledLightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>